--- a/session1.ipynb
+++ b/session1.ipynb
@@ -36,9 +36,11 @@
     "\n",
     "`G:`\n",
     "\n",
+    "and then:\n",
+    "\n",
     "`cd stuff_for_gds4ae`\n",
     "\n",
-    "This will define which is the `work` directory that will come up later. If you have uglier folder systems, it's often better to put them between brackets, for instance, in my case I have to write:\n",
+    "This will define which is the `work` directory that will come up later. If you have uglier folder systems, you should put them between brackets, for instance, in my case I have to write:\n",
     "\n",
     "`H:`\n",
     "\n",
@@ -57,6 +59,8 @@
     "Don't close either docker nor the terminal while your session is running. If you do, it will automatically expire, kernels are shut down and all unsaved changes will be lost.\n",
     "\n",
     "### Running Jupyter Lab if you installed it natively in Anaconda\n",
+    "\n",
+    "If you are on Windows Home and you cannot use WSL and Docker, you must have installed the `gds` environment natively. Don't worry, most likely you will have no problems (It's a tradeoff between compatibility and convenience), but for you the procedure is a bit different:\n",
     "\n",
     "1. Open the Anaconda terminal (Anaconda Powershell Prompt in Windows)\n",
     "\n",
@@ -88,7 +92,7 @@
     "\n",
     "### Using Jupyter Notebooks with Visual Studio Code\n",
     "\n",
-    "Jupyter notebooks run on a browser interface by default. This is alright, but I'm not a big fan. Thankfully, you can run Jupyter Notebooks in Visual Studio Code, the most used IDE, with a few extra steps, and you will get a lot of convenient features like code highlighting, autocompletion, help when you hover the cursor over function calls, and more.\n",
+    "Jupyter notebooks run on a browser interface by default. This is alright, but I'm not a big fan. Thankfully, you can run Jupyter Notebooks in Visual Studio Code, the most popular IDE today, with a few extra steps, and you will get a lot of convenient features like code highlighting, autocompletion, help when you hover the cursor over function calls, and more.\n",
     "\n",
     "You can install Visual Studio Code from [its website](https://code.visualstudio.com/). Then, you should install the Jupyter Extension from the Extensions marketplace:\n",
     "\n",
@@ -127,11 +131,7 @@
     "\n",
     "### If you had to do a native Anaconda installation\n",
     "\n",
-    "In this case, things are easier: When you open the notebook, on the top-right corner, you should have `gds` in your list of available Jupyter servers. \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "In this case, things are easier: When you open the notebook, on the top-right corner, you should have `gds` in your list of available Jupyter servers, without the need to intialize the Jupyter kernel. Alternatively, you can initialize the Jupyter kernel from the Anaconda prompt, and use its URL in VSCode as if it were a remote Jupyter kernel. "
    ]
   },
   {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "inappropriate-economics",
    "metadata": {},
    "outputs": [
@@ -330,18 +330,9 @@
      "text": [
       "<class 'int'>\n",
       "<class 'float'>\n",
-      "<class 'bool'>\n"
+      "<class 'bool'>\n",
+      "False\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -351,12 +342,12 @@
     "print(type(y))\n",
     "v = 100 < 10\n",
     "print(type(v))\n",
-    "v"
+    "print(v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "medieval-castle",
    "metadata": {},
    "outputs": [
@@ -366,7 +357,7 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "infrared-workshop",
    "metadata": {},
    "outputs": [
@@ -401,7 +392,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "retired-airplane",
    "metadata": {},
    "outputs": [
@@ -423,7 +414,7 @@
        "list"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "seasonal-julian",
    "metadata": {},
    "outputs": [
@@ -445,7 +436,7 @@
        "[10, 'foo', False, 2.5]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "limited-cliff",
    "metadata": {},
    "outputs": [
@@ -475,7 +466,7 @@
        "10"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,15 +516,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "addressed-technician",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "y = (1,2)\n",
-    "# y[0] = 10"
+    "y = (1,2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "697bd9a5",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "y[0] = 10\n",
+    "---------------------------------------------------------------------------\n",
+    "TypeError                                 Traceback (most recent call last)\n",
+    "h:\\My Drive\\CEMFI\\2022_PhD\\gds4ae_practice_23\\session1.ipynb Cell 23 in <cell line: 1>()\n",
+    "----> 1 y[0] = 10\n",
+    "\n",
+    "TypeError: 'tuple' object does not support item assignment\n",
+    "```"
    ]
   },
   {
@@ -546,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "human-match",
    "metadata": {
     "tags": []
@@ -558,7 +565,7 @@
        "20"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "adaptive-reduction",
    "metadata": {},
    "outputs": [
@@ -693,29 +700,30 @@
        "dict"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "d = {'name':'Frodo','age':33} # dictionaries are like lists but named instead of numbered\n",
+    "d['mission'] = 'to take the Ring to Mount Doom' #New key-value pairs are introduced to the dict like this\n",
     "type(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "cooperative-shelf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Frodo', 'age': 33}"
+       "{'name': 'Frodo', 'age': 33, 'mission': 'to take the Ring to Mount Doom'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "hawaiian-cleanup",
    "metadata": {},
    "outputs": [
@@ -736,7 +744,7 @@
        "33"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,18 +754,49 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "radio-bubble",
    "metadata": {},
    "source": [
     "The names `'name'` and `'age'` are *keys* and the objects that they are mapped to are *values*.\n",
+    "You can access keys and values using the `items()` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4bfac513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Hobbit's name is Frodo\n",
+      "The Hobbit's age is 33\n",
+      "The Hobbit's mission is to take the Ring to Mount Doom\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in d.items():\n",
+    "    print(f\"The Hobbit's {key} is {value}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e01224c6",
+   "metadata": {},
+   "source": [
     "\n",
     "Sets are unordered collections without duplicates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "common-winning",
    "metadata": {},
    "outputs": [
@@ -767,7 +806,7 @@
        "set"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "golden-islam",
    "metadata": {},
    "outputs": [
@@ -789,7 +828,7 @@
        "{'b'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "reserved-boulder",
    "metadata": {},
    "outputs": [
@@ -899,7 +938,7 @@
    "source": [
     "animals = ['dog','cat','bird']\n",
     "for animal in animals:\n",
-    "    print(\"The plural of \" + animal + \" is \" + animal + \"s\")"
+    "    print(f\"The plural of {animal} is {animal + 's'}\")"
    ]
   },
   {
@@ -912,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "joint-tourism",
    "metadata": {},
    "outputs": [
@@ -922,7 +961,7 @@
        "['dogs', 'cats', 'birds']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "loose-hybrid",
    "metadata": {},
    "outputs": [
@@ -973,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "grateful-graphics",
    "metadata": {},
    "outputs": [
@@ -1011,14 +1050,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "8440e749",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "451bab890b73418294fcf8b2007a163e",
+       "model_id": "0682339fd9414a69a9ba7165efc14e54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1066,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "affecting-thursday",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1115,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "miniature-adult",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1137,7 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "internal-wiring",
    "metadata": {},
    "outputs": [
@@ -1120,7 +1159,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,28 +1170,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "juvenile-reconstruction",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 < 2 and 'g' in 'foo'"
+    "1 < 2 and 'g' in 'foo' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
+   "id": "7e0541c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 < 2 or 'g' in 'foo' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "49310627",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 < 2 and not 'g' in 'foo' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "humanitarian-karen",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "id": "favorite-conversion",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1278,7 @@
        "'nonnegative'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "id": "collect-mystery",
    "metadata": {},
    "outputs": [
@@ -1222,20 +1303,20 @@
        "3"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def f(x, a=1, b=1):\n",
+    "def f(x, a=1, b=1): #Function with default positional inputs\n",
     "    return a + b * x\n",
     "f(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "noble-investing",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1326,7 @@
        "14"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
