--- a/session1.ipynb
+++ b/session1.ipynb
@@ -1437,6 +1437,7 @@
     "        if 'dog' in kwargs.keys():\n",
     "            dog = kwargs['dog']\n",
     "            try: \n",
+    "                ##This will fail if the creature you try to walk has no owner attribute, will go to the except\n",
     "                if dog.owner == self.name:\n",
     "                    if self.tired == True:\n",
     "                        print(f\"{self.name} is too tired to walk the dog\")\n",
@@ -1465,7 +1466,7 @@
     "                dog.setOwner(self.name)\n",
     "        else: \n",
     "            print(f\"{self.name}, you cannot pet a {dog.animal} like they're a dog!\")\n",
-    "# Driver Code  \n",
+    "\n",
     "Tintin = Human(\"Tintin\")"
    ]
   },
@@ -1490,7 +1491,7 @@
     "        self.owner = None   \n",
     "        self.tired = False\n",
     "\n",
-    "    #Function that defines what to represent when typing the dog\n",
+    "    #Function that defines what to print to the screen when asking for a dog class object\n",
     "    def __repr__(self):\n",
     "        stri = \"Dog(\"\n",
     "        for key, value in self.__dict__.items():\n",
