--- a/session2_download_data_example.ipynb
+++ b/session2_download_data_example.ipynb
@@ -381,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "gds",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +400,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "affa99c05f0e60c4024f50a0ff8eaae5133bbd89e1a9c4f26899a878689adda1"
+    "hash": "682183d1e1ea710cdea3a31eb6787b575e9eca5ed909d8154604d7d2a5c5c515"
    }
   }
  },
