--- a/session2.ipynb
+++ b/session2.ipynb
@@ -114,10 +114,10 @@
     {
      "data": {
       "text/plain": [
-       "0   -0.916907\n",
-       "1    0.740526\n",
-       "2    2.742304\n",
-       "3   -0.195428\n",
+       "0    0.422113\n",
+       "1    0.105120\n",
+       "2   -0.279556\n",
+       "3    1.507177\n",
        "Name: daily returns, dtype: float64"
       ]
      },
@@ -146,10 +146,10 @@
     {
      "data": {
       "text/plain": [
-       "0    -91.690672\n",
-       "1     74.052616\n",
-       "2    274.230415\n",
-       "3    -19.542797\n",
+       "0     42.211333\n",
+       "1     10.511966\n",
+       "2    -27.955557\n",
+       "3    150.717734\n",
        "Name: daily returns, dtype: float64"
       ]
      },
@@ -171,13 +171,13 @@
      "data": {
       "text/plain": [
        "count    4.000000\n",
-       "mean     0.592624\n",
-       "std      1.585634\n",
-       "min     -0.916907\n",
-       "25%     -0.375798\n",
-       "50%      0.272549\n",
-       "75%      1.240971\n",
-       "max      2.742304\n",
+       "mean     0.438714\n",
+       "std      0.767916\n",
+       "min     -0.279556\n",
+       "25%      0.008951\n",
+       "50%      0.263616\n",
+       "75%      0.693379\n",
+       "max      1.507177\n",
        "Name: daily returns, dtype: float64"
       ]
      },
@@ -198,10 +198,10 @@
     {
      "data": {
       "text/plain": [
-       "AMZN   -0.916907\n",
-       "APPL    0.740526\n",
-       "MSFT    2.742304\n",
-       "GOOG   -0.195428\n",
+       "AMZN    0.422113\n",
+       "APPL    0.105120\n",
+       "MSFT   -0.279556\n",
+       "GOOG    1.507177\n",
        "Name: daily returns, dtype: float64"
       ]
      },
@@ -223,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.9169067228097089"
+       "0.42211332974749594"
       ]
      },
      "execution_count": 8,
@@ -244,9 +244,9 @@
      "data": {
       "text/plain": [
        "AMZN    0.000000\n",
-       "APPL    0.740526\n",
-       "MSFT    2.742304\n",
-       "GOOG   -0.195428\n",
+       "APPL    0.105120\n",
+       "MSFT   -0.279556\n",
+       "GOOG    1.507177\n",
        "Name: daily returns, dtype: float64"
       ]
      },
@@ -2572,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2582,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2602,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2969,13 +2969,13 @@
        "       [False, False, False, ..., False, False, False]])\n",
        "Coordinates:\n",
        "  * x        (x) int64 0 30 60 90 120 150 ... 215850 215880 215910 215940 215970\n",
-       "  * y        (y) int64 215970 215940 215910 215880 215850 ... 120 90 60 30 0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>x</span>: 7200</li><li><span class='xr-has-index'>y</span>: 7200</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-dd9d11b1-7c0b-4840-85c2-87c3786e468d' class='xr-array-in' type='checkbox' checked><label for='section-dd9d11b1-7c0b-4840-85c2-87c3786e468d' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>True True True True True True ... False False False False False False</span></div><div class='xr-array-data'><pre>array([[ True,  True,  True, ...,  True,  True,  True],\n",
+       "  * y        (y) int64 215970 215940 215910 215880 215850 ... 120 90 60 30 0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>x</span>: 7200</li><li><span class='xr-has-index'>y</span>: 7200</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2ed0ab78-c53c-482e-a961-a9cff6b80ef7' class='xr-array-in' type='checkbox' checked><label for='section-2ed0ab78-c53c-482e-a961-a9cff6b80ef7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>True True True True True True ... False False False False False False</span></div><div class='xr-array-data'><pre>array([[ True,  True,  True, ...,  True,  True,  True],\n",
        "       [ True,  True,  True, ...,  True,  True,  True],\n",
        "       [ True,  True,  True, ...,  True,  True,  True],\n",
        "       ...,\n",
        "       [False, False, False, ..., False, False, False],\n",
        "       [False, False, False, ..., False, False, False],\n",
-       "       [False, False, False, ..., False, False, False]])</pre></div></div></li><li class='xr-section-item'><input id='section-7d2d9dd7-2216-4900-ab31-2718ef32ccc2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7d2d9dd7-2216-4900-ab31-2718ef32ccc2' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 30 60 90 ... 215910 215940 215970</div><input id='attrs-c13a4775-7a1f-406c-8fd4-5f268bd7bce6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c13a4775-7a1f-406c-8fd4-5f268bd7bce6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-cfe3f708-773d-4a39-b7fe-d024347784f6' class='xr-var-data-in' type='checkbox'><label for='data-cfe3f708-773d-4a39-b7fe-d024347784f6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([     0,     30,     60, ..., 215910, 215940, 215970])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>215970 215940 215910 ... 60 30 0</div><input id='attrs-6b058670-c940-4679-ad54-a0eb4a0bfbfa' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6b058670-c940-4679-ad54-a0eb4a0bfbfa' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-89ad5a67-f623-467a-81fc-e2cc8c0af20f' class='xr-var-data-in' type='checkbox'><label for='data-89ad5a67-f623-467a-81fc-e2cc8c0af20f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([215970, 215940, 215910, ...,     60,     30,      0])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d26df133-762f-4295-9921-b3478eb5c4e3' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-d26df133-762f-4295-9921-b3478eb5c4e3' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "       [False, False, False, ..., False, False, False]])</pre></div></div></li><li class='xr-section-item'><input id='section-5c3766d1-fb71-4a26-990e-72cc1c873cb9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-5c3766d1-fb71-4a26-990e-72cc1c873cb9' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 30 60 90 ... 215910 215940 215970</div><input id='attrs-5d907d26-45fe-4d60-854e-d451efd907df' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5d907d26-45fe-4d60-854e-d451efd907df' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c4d6d5c5-8f84-4757-8050-c7141084c86e' class='xr-var-data-in' type='checkbox'><label for='data-c4d6d5c5-8f84-4757-8050-c7141084c86e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([     0,     30,     60, ..., 215910, 215940, 215970])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>215970 215940 215910 ... 60 30 0</div><input id='attrs-0cc6a251-efe4-4d29-9114-8d6fe9a057ce' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-0cc6a251-efe4-4d29-9114-8d6fe9a057ce' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7f158aff-6697-4193-be4e-22be377e81ea' class='xr-var-data-in' type='checkbox'><label for='data-7f158aff-6697-4193-be4e-22be377e81ea' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([215970, 215940, 215910, ...,     60,     30,      0])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-01510152-58ae-4b29-a3cb-f8e891d66f53' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-01510152-58ae-4b29-a3cb-f8e891d66f53' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray (x: 7200, y: 7200)>\n",
@@ -2991,7 +2991,7 @@
        "  * y        (y) int64 215970 215940 215910 215880 215850 ... 120 90 60 30 0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3009,16 +3009,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fe51d9a4a90>"
+       "<matplotlib.collections.QuadMesh at 0x7f8c36df7430>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3048,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3069,7 +3069,7 @@
        "        164.46272]], dtype=float32)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3117,7 +3117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3196,7 +3196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3205,13 +3205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "723c59a5e8fd48f9a9af0c1bbcc67570",
+       "model_id": "1b6f0a53c15f402984170b848c45ef38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3226,7 +3226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating slope using loop on xarray.DataArray took 42.002429 seconds\n"
+      "Calculating slope using loop on xarray.DataArray took 36.426600 seconds\n"
      ]
     }
    ],
@@ -3239,13 +3239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a79aeaa4f8cd4d94a1d34b1dd9f4e51e",
+       "model_id": "cbfb309e89914a0dae98cd6c56723f52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3260,7 +3260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating slope using loop on numpy array took 0.269864 seconds\n"
+      "Calculating slope using loop on numpy array took 0.195547 seconds\n"
      ]
     }
    ],
@@ -3273,14 +3273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating slope using JIT-compiled function on numpy array took 0.000491 seconds\n"
+      "Calculating slope using JIT-compiled function on numpy array took 0.000518 seconds\n"
      ]
     }
    ],
@@ -3294,14 +3294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating slope using JIT-compiled method straight from a library took 0.000972 seconds\n"
+      "Calculating slope using JIT-compiled method straight from a library took 0.000873 seconds\n"
      ]
     }
    ],
@@ -3317,16 +3317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fe51d0daaf0>"
+       "<matplotlib.collections.QuadMesh at 0x7f8c39bc83a0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3349,16 +3349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7fe51a93beb0>"
+       "<matplotlib.collections.QuadMesh at 0x7f8c39be0430>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
