add installation instructions

--- a/session1.ipynb
+++ b/session1.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "### Set-up\n",
     "\n",
-    "Please make sure you have followed the [installation instructions](https://gdsl-ul.github.io/soft_install/https://gdsl-ul.github.io/soft_install/). Note that you should install gds version 8.0, not 6.1, that's a typo in the webpage.\n",
+    "Please make sure you have followed the [installation instructions](https://gdsl-ul.github.io/soft_install/). Note that you should install gds version 8.0, not 6.1, that's a typo in the webpage.\n",
     "\n",
     "If, for whatever reason, you did not manage to install everything or something is not working during the class, you can use [Binder](https://darribas.org/gds4ae/content/pages/infrastructure.html) to follow the lecture. Note that there is no way to save any changes you make to your local machine using Binder.\n",
     "\n",
